--- a/rna_seq_gatk/Dockerfile
+++ b/rna_seq_gatk/Dockerfile
@@ -1,11 +1,13 @@
 FROM continuumio/miniconda3:4.5.4
 
 # docker build -t mfreitas/rnaseq:0.1 .
+COPY environment.yml environment.yml
 
 RUN conda config --add channels defaults && \
     conda config --add channels conda-forge && \
     conda config --add channels bioconda
 
-RUN conda install -y star multiqc trim-galore subread fastqc
+RUN conda env update -f environment.yml
 
-RUN conda install -y picard gatk
+RUN conda list
+RUN conda info
