--- a/rna_seq_star/environment.yml
+++ b/rna_seq_star/environment.yml
@@ -97,3 +97,102 @@ dependencies:
   - yaml=0.1.7=had09818_2
   - zlib=1.2.11=ha838bed_2
 prefix: /opt/conda
+`name: base
+channels:
+  - bioconda
+  - conda-forge
+  - defaults
+dependencies:
+  - cutadapt=1.16=py36_2
+  - fastqc=0.11.7=pl5.22.0_0
+  - multiqc=1.6a0=py36h24bf2e0_2
+  - simplejson=3.8.1=py36_0
+  - star=2.6.0c=1
+  - subread=1.6.2=ha92aebf_0
+  - trim-galore=0.5.0=0
+  - xopen=0.3.2=py_1
+  - ca-certificates=2018.4.16=0
+  - certifi=2018.4.16=py36_0
+  - click=6.7=py_1
+  - colormath=3.0.0=py_2
+  - conda=4.5.8=py36_1
+  - cycler=0.10.0=py_1
+  - dbus=1.13.0=h3a4f0e9_0
+  - decorator=4.3.0=py_0
+  - expat=2.2.5=hfc679d8_1
+  - fontconfig=2.13.0=hd36ec8e_5
+  - freetype=2.8.1=hfa320df_1
+  - future=0.16.0=py36_2
+  - gettext=0.19.8.1=0
+  - glib=2.55.0=h464dc38_2
+  - gst-plugins-base=1.12.5=hde13a9d_0
+  - gstreamer=1.12.5=h61a6719_0
+  - icu=58.2=hfc679d8_0
+  - jinja2=2.10=py_1
+  - jpeg=9c=h470a237_0
+  - kiwisolver=1.0.1=py36_1
+  - libiconv=1.15=h470a237_1
+  - libpng=1.6.34=ha92aebf_1
+  - libuuid=2.32.1=h470a237_0
+  - libxcb=1.13=h470a237_2
+  - libxml2=2.9.8=h422b904_2
+  - lzstring=1.0.3=py36_0
+  - markdown=2.6.11=py_0
+  - markupsafe=1.0=py36_0
+  - matplotlib=2.2.2=py36_1
+  - mkl_fft=1.0.5=py36_0
+  - mkl_random=1.0.1=py36_0
+  - networkx=2.0=py36_1
+  - openssl=1.0.2o=h470a237_1
+  - pcre=8.41=h470a237_2
+  - perl=5.22.0.1=0
+  - pigz=2.3.4=0
+  - pthread-stubs=0.4=h470a237_1
+  - pyparsing=2.2.0=py_1
+  - pyqt=5.6.0=py36h8210e8a_6
+  - python-dateutil=2.7.3=py_0
+  - pytz=2018.5=py_0
+  - pyyaml=3.12=py36_1
+  - sip=4.18=py36_1
+  - spectra=0.0.11=py_0
+  - tornado=5.1=py36h470a237_1
+  - xorg-libxau=1.0.8=h470a237_6
+  - xorg-libxdmcp=1.1.2=h470a237_7
+  - asn1crypto=0.24.0=py36_0
+  - bz2file=0.98=py36_1
+  - cffi=1.11.5=py36h9745a5d_0
+  - chardet=3.0.4=py36h0f667ec_1
+  - conda-env=2.6.0=h36134e3_1
+  - cryptography=2.2.2=py36h14c3975_0
+  - font-ttf-dejavu-sans-mono=2.37=h6964260_0
+  - idna=2.6=py36h82fb2a8_1
+  - intel-openmp=2018.0.3=0
+  - libedit=3.1.20170329=h6b74fdf_2
+  - libffi=3.2.1=hd88cf55_4
+  - libgcc-ng=7.2.0=hdf63c60_3
+  - libgfortran-ng=7.2.0=hdf63c60_3
+  - libstdcxx-ng=7.2.0=hdf63c60_3
+  - mkl=2018.0.3=1
+  - ncurses=6.1=hf484d3e_0
+  - numpy=1.14.2=py36hdbf6ddf_1
+  - openjdk=8.0.121=1
+  - pip=10.0.1=py36_0
+  - pycosat=0.6.3=py36h0a5515d_0
+  - pycparser=2.18=py36hf9f622e_1
+  - pyopenssl=18.0.0=py36_0
+  - pysocks=1.6.8=py36_0
+  - python=3.6.5=hc3d631a_2
+  - qt=5.6.2=h974d657_12
+  - readline=7.0=ha6073c6_4
+  - requests=2.18.4=py36he2e5f8d_1
+  - ruamel_yaml=0.15.37=py36h14c3975_2
+  - setuptools=39.2.0=py36_0
+  - six=1.11.0=py36h372c433_1
+  - sqlite=3.23.1=he433501_0
+  - tk=8.6.7=hc745277_3
+  - urllib3=1.22=py36hbe7ace6_0
+  - wheel=0.31.1=py36_0
+  - xz=5.2.4=h14c3975_4
+  - yaml=0.1.7=had09818_2
+  - zlib=1.2.11=ha838bed_2
+prefix: /opt/conda
