--- a/rna_seq_star/Dockerfile
+++ b/rna_seq_star/Dockerfile
@@ -9,6 +9,13 @@ RUN conda config --add channels defaults && \
 
 RUN conda env update -f environment.yml
 
+## Check for latest link: http://downloads.asperasoft.com/en/downloads/8?list
+RUN wget -qO- https://download.asperasoft.com/download/sw/connect/3.8.1/ibm-aspera-connect-3.8.1.161274-linux-g2.12-64.tar.gz | tar xvz \
+    && chmod +x ibm-aspera-connect-3.8.1.161274-linux-g2.12-64.sh \
+    && ./ibm-aspera-connect-3.8.1.161274-linux-g2.12-64.sh
+
+ENV PATH=$PATH:/root/.aspera/connect/bin/
+
 #RUN conda list
 #RUN conda info
 
